# dolibarr-mcp

./: .env.example  .gitignore  AGENT_INSTRUCTIONS.md  CHANGELOG.md  CLEANUP_PLAN.md  README.md  cleanup_repo.py  diagnose_and_fix.py  mcp_server_launcher.py  pyproject.toml  requirements-minimal.txt  requirements-windows.txt  requirements.txt  run_standalone.bat  run_ultra.bat  setup.sh  setup_claude_complete.bat  setup_manual.bat  setup_windows_fix.bat  test_api_connection.py  test_dolibarr_mcp.py  test_ultra_direct.py
.github/workflows/: caprover-deploy.yml  docker-publish.yml
api/: README.md
docker/: .env.example  Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: CAPROVER_DEPLOYMENT.md  README.md  api-reference.md  configuration.md  development.md  quickstart.md
scripts/: docker-publish.sh  generate_api_key.py
src/dolibarr_mcp/: __init__.py  __main__.py  cli.py  config.py  dolibarr_client.py  dolibarr_mcp_server.py  test_connection.py  testing.py  ultra_simple_server.py
src/dolibarr_mcp/auth/: __init__.py  api_key.py
src/dolibarr_mcp/cache/: __init__.py  dragonfly.py  strategies.py
src/dolibarr_mcp/client/: __init__.py  base.py  exceptions.py
src/dolibarr_mcp/formats/: __init__.py  formatter.py  toon_encoder.py
src/dolibarr_mcp/schemas/: __init__.py  base.py  entities.py  fields.py
src/dolibarr_mcp/server/: __init__.py  handlers.py  main.py  responses.py  tools.py
src/dolibarr_mcp/transports/: __init__.py  http.py  stdio.py
tests/: README.md  __init__.py  test_auth.py  test_cache.py  test_cache_integration.py  test_client_base_gzip.py  test_config.py  test_crud_operations.py  test_dolibarr_client.py  test_project_operations.py  test_proposal_line_compat.py  test_search_tools.py  test_toon_encoder.py
tests/integration/: test_minimal_creates.py
